src/test/deca/context/invalid/created/ConvCl.deca

class A {
    int x;
}

class B {
    int y;
}

{
    A a = new A();
    B b;

    // Erreur : A n'est pas une sous-classe de B, 
   
    b = (B)(a); 
}